# TINY

./: .gitignore  CMakeLists.txt  README.md  serverA.c
include/: BroadcastStruct.h  Communicate.h  Defines.h  Exit.h  File.h  FileBroadcastStruct.h  FileHandler.h  GlobalFiles.h  LocalSystemHandler.h  Logger.h  P2PFiles.h  P2PNode.h  P2PRecord.h  P2Precord.h  PackageLosingApi.h  UserRequestHandler.h
source/: CMakeLists.txt  Communicate.cpp  File.cpp  FileBroadcastStruct.cpp  FileHandler.cpp  GlobalFiles.cpp  LocalSystemHandler.cpp  P2PFiles.cpp  P2PNode.cpp  P2PRecord.cpp  PackageLosingApi.cpp  UserRequestHandler.cpp  main.cpp
